--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
             <span class="span-blue">Web</span>Studio
         </p>
         <div class="three-objects">
-            <a href="https://and-bond.github.io/web-studio/">
-                <p class="studio">Студия</p>
+            <a href="https://and-bond.github.io/web-studio/" class="studio">
+                Студия
             </a>
-            <a href="https://and-bond.github.io/portfolio/">
-                <p class="portfolio">Портфолио</p>
+            <a href="https://and-bond.github.io/portfolio/" class="portfolio">
+                Портфолио
             </a>
             <p class="contacts">Контакты</p>
         </div>
@@ -32,29 +32,29 @@
     <!-- Все фотки -->
     <main class="main">
         <ul class="buttons">
-            <li>
+            <li class="li-1">
                 <button class="button-1" type="button">
-                    <p class="button-1-text">Все</p>
+                    Все
                 </button>
             </li>
-            <li>
+            <li class="li-2">
                 <button class="button-2" type="button">
-                    <p class="button-2-text">Веб-сайты</p>
+                    Веб-сайты
                 </button>
             </li>
-            <li>
+            <li class="li-3">
                 <button class="button-3" type="button">
-                    <p class="button-3-text">Приложения</p>
+                    Приложения
                 </button>
             </li>
-            <li>
+            <li class="li-4">
                 <button class="button-4" type="button">
-                    <p class="button-4-text">Дизайн</p>
+                    Дизайн
                 </button>
             </li>
-            <li>
+            <li class="li-5">
                 <button class="button-5" type="button">
-                    <p class="button-5-text">Маркетинг</p>
+                    Маркетинг
                 </button>
             </li>
         </ul>
