--- a/index.html
+++ b/index.html
@@ -24,13 +24,14 @@
             <a href="https://and-bond.github.io/portfolio/" class="portfolio">
                 Портфолио
             </a>
-            <p class="contacts">Контакты</p>
+            <a href="" class="contacts">Контакты</a>
         </div>
         <a href="mailto:info@devstudio.com" class="mail-a">info@devstudio.com</a>
         <a href="tel:+380961111111" class="tel-a">+38 096 111 11 11</a>
     </nav>
     <!-- Все фотки -->
     <main class="main">
+        <!-- Кнопки -->
         <ul class="buttons">
             <li class="li-1">
                 <button class="button-1" type="button">
@@ -58,6 +59,73 @@
                 </button>
             </li>
         </ul>
+        <!-- Картинки -->
+        <section>  
+            <div class="img-conteiner-1">
+                <a href="">
+                <img src="./icons/img1.png" alt="" class="img">
+                <h3>Технокряк</h3>
+                <p>Веб-сайт</p>
+                </a>
+            </div>
+            <div class="img-conteiner-2">
+                <a href="">
+                <img src="./icons/img2.png" alt="" class="img">
+                <h3 class="h3-special">Постер New Orlean vs Golden Star</h3>
+                <p>Дизайн</p>
+                </a>
+            </div>
+            <div class="img-conteiner-3">
+                <a href="">
+                <img src="./icons/img3.png" alt="" class="img">
+                <h3>Ресторан Seafood</h3>
+                <p>Приложение</p>
+                </a>
+            </div>
+            <div class="img-conteiner-4">
+                <a href="">
+                <img src="./icons/img4.png" alt="" class="img">
+                <h3>Проект Prime</h3>
+                <p>Маркетинг</p>
+                </a>
+            </div>
+            <div class="img-conteiner-5">
+                <a href="">
+                <img src="./icons/img5.png" alt="" class="img">
+                <h3>Проект Boxes</h3>
+                <p>Приложение</p>
+                </a>
+            </div>
+            <div class="img-conteiner-6">
+                <a href="">
+                <img src="./icons/img6.png" alt="" class="img">
+                <h3>Inspiration has no Borders</h3>
+                <p>Веб-сайт</p>
+                </a>
+            </div>
+            <div class="img-conteiner-7">
+                <a href="">
+                <img src="./icons/img7.png" alt="" class="img">
+                <h3>Издание Limited Edition</h3>
+                <p>Дизайн</p>
+                </a>
+            </div>
+            <div class="img-conteiner-8">
+                <a href="">
+                <img src="./icons/img8.png" alt="" class="img">
+                <h3>Проект LAB</h3>
+                <p>Маркетинг</p>
+                </a>
+            </div>
+            <div class="img-conteiner-9">
+                <a href="">
+                <img src="./icons/img9.png" alt="" class="img">
+                <h3>Growing Business</h3>
+                <p>Приложение</p>
+                </a>
+            </div>
+
+        </section>
     </main>
     <!-- Подвал -->
 <footer class="footer">
