--- a/index.html
+++ b/index.html
@@ -13,129 +13,180 @@
 </head>
 <body>
     <!-- Вверхняя линия -->
-    <nav class="top-line">
-        <p class="webstudio-1">
-            <span class="span-blue">Web</span>Studio
-        </p>
-        <div class="three-objects">
-            <a href="https://and-bond.github.io/web-studio/" class="studio">
-                Студия
-            </a>
-            <a href="https://and-bond.github.io/portfolio/" class="portfolio">
-                Портфолио
-            </a>
-            <a href="" class="contacts">Контакты</a>
-        </div>
-        <a href="mailto:info@devstudio.com" class="mail-a">info@devstudio.com</a>
-        <a href="tel:+380961111111" class="tel-a">+38 096 111 11 11</a>
-    </nav>
+<nav class="top-line">
+    <p class="webstudio-1">
+        <span class="span-blue">Web</span>Studio
+    </p>
+    <div class="top-line-navigation">
+        <a href="https://and-bond.github.io/web-studio/" class="studio">
+            Студия
+        </a>
+        <a href="https://and-bond.github.io/portfolio/" class="portfolio">
+            Портфолио
+        </a>
+        <a href="" class="contacts">Контакты</a>
+    </div>
+    <a href="mailto:info@devstudio.com" class="mail-a">
+        <svg class="svg-message">
+            <use href="./icons/sprite.svg#icon-message"></use>
+        </svg>
+        info@devstudio.com
+    </a>
+    <a href="tel:+380961111111" class="tel-a">
+        <svg class="svg-tel">
+            <use href="./icons/sprite.svg#icon-smartphone"></use>
+        </svg>
+        +38 096 111 11 11
+    </a>
+</nav>
     <!-- Все фотки -->
-    <main class="main">
-        <!-- Кнопки -->
-        <ul class="buttons">
-            <li class="li-1">
-                <button class="button-1" type="button">
-                    Все
-                </button>
+<main class="main">
+    <!-- Кнопки -->
+    <ul class="buttons">
+        <li class="li-1">
+            <button class="button-1" type="button">
+                Все
+            </button>
+        </li>
+        <li class="li-2">
+            <button class="button-2" type="button">
+                Веб-сайты
+            </button>
+        </li>
+        <li class="li-3">
+            <button class="button-3" type="button">
+                Приложения
+            </button>
+        </li>
+        <li class="li-4">
+            <button class="button-4" type="button">
+                Дизайн
+            </button>
+        </li>
+        <li class="li-5">
+            <button class="button-5" type="button">
+                Маркетинг
+            </button>
+        </li>
+    </ul>
+    <!-- Картинки -->
+    <ul class="section">
+            <li class="img-conteiner-1">
+                <a href="">
+                <img src="./img/img1.png" alt="" class="img">
+                <h3>Технокряк</h3>
+                <p>Веб-сайт</p>
+                </a>
             </li>
-            <li class="li-2">
-                <button class="button-2" type="button">
-                    Веб-сайты
-                </button>
+            <li class="img-conteiner-2">
+                <a href="">
+                <img src="./img/img2.png" alt="" class="img">
+                <h3 class="h3-special">Постер New Orlean vs Golden Star</h3>
+                <p>Дизайн</p>
+                </a>
             </li>
-            <li class="li-3">
-                <button class="button-3" type="button">
-                    Приложения
-                </button>
+            <li class="img-conteiner-3">
+                <a href="">
+                <img src="./img/img3.png" alt="" class="img">
+                <h3>Ресторан Seafood</h3>
+                <p>Приложение</p>
+                </a>
             </li>
-            <li class="li-4">
-                <button class="button-4" type="button">
-                    Дизайн
-                </button>
+            <li class="img-conteiner-4">
+                <a href="">
+                <img src="./img/img4.png" alt="" class="img">
+                <h3>Проект Prime</h3>
+                <p>Маркетинг</p>
+                </a>
             </li>
-            <li class="li-5">
-                <button class="button-5" type="button">
-                    Маркетинг
-                </button>
+            <li class="img-conteiner-5">
+                <a href="">
+                <img src="./img/img5.png" alt="" class="img">
+                <h3>Проект Boxes</h3>
+                <p>Приложение</p>
+                </a>
+            </li>
+            <li class="img-conteiner-6">
+                <a href="">
+                <img src="./img/img6.png" alt="" class="img">
+                <h3>Inspiration has no Borders</h3>
+                <p>Веб-сайт</p>
+                </a>
+            </li>
+            <li class="img-conteiner-7">
+                <a href="">
+                <img src="./img/img7.png" alt="" class="img">
+                <h3>Издание Limited Edition</h3>
+                <p>Дизайн</p>
+                </a>
+            </li>
+            <li class="img-conteiner-8">
+                <a href="">
+                <img src="./img/img8.png" alt="" class="img">
+                <h3>Проект LAB</h3>
+                <p>Маркетинг</p>
+                </a>
+            </li>
+            <li class="img-conteiner-9">
+                <a href="">
+                <img src="./img/img9.png" alt="" class="img">
+                <h3>Growing Business</h3>
+                <p>Приложение</p>
+                </a>
             </li>
         </ul>
-        <!-- Картинки -->
-        <ul class="section">
-                <li class="img-conteiner-1">
-                    <a href="">
-                    <img src="./icons/img1.png" alt="" class="img">
-                    <h3>Технокряк</h3>
-                    <p>Веб-сайт</p>
-                    </a>
-                </li>
-                <li class="img-conteiner-2">
-                    <a href="">
-                    <img src="./icons/img2.png" alt="" class="img">
-                    <h3 class="h3-special">Постер New Orlean vs Golden Star</h3>
-                    <p>Дизайн</p>
-                    </a>
-                </li>
-                <li class="img-conteiner-3">
-                    <a href="">
-                    <img src="./icons/img3.png" alt="" class="img">
-                    <h3>Ресторан Seafood</h3>
-                    <p>Приложение</p>
-                    </a>
-                </li>
-                <li class="img-conteiner-4">
-                    <a href="">
-                    <img src="./icons/img4.png" alt="" class="img">
-                    <h3>Проект Prime</h3>
-                    <p>Маркетинг</p>
-                    </a>
-                </li>
-                <li class="img-conteiner-5">
-                    <a href="">
-                    <img src="./icons/img5.png" alt="" class="img">
-                    <h3>Проект Boxes</h3>
-                    <p>Приложение</p>
-                    </a>
-               </li>
-                <li class="img-conteiner-6">
-                    <a href="">
-                    <img src="./icons/img6.png" alt="" class="img">
-                    <h3>Inspiration has no Borders</h3>
-                    <p>Веб-сайт</p>
-                    </a>
-                </li>
-                <li class="img-conteiner-7">
-                    <a href="">
-                    <img src="./icons/img7.png" alt="" class="img">
-                    <h3>Издание Limited Edition</h3>
-                    <p>Дизайн</p>
-                    </a>
-                </li>
-                <li class="img-conteiner-8">
-                    <a href="">
-                    <img src="./icons/img8.png" alt="" class="img">
-                    <h3>Проект LAB</h3>
-                    <p>Маркетинг</p>
-                    </a>
-                </li>
-                <li class="img-conteiner-9">
-                    <a href="">
-                    <img src="./icons/img9.png" alt="" class="img">
-                    <h3>Growing Business</h3>
-                    <p>Приложение</p>
-                    </a>
-                </li>
-            </ul>
-    </main>
+</main>
     <!-- Подвал -->
 <footer class="footer">
-    <p class="webstudio-2">
-        <span class="span-blue-2">Web</span><span class="white">Studio</span>
-    </p>
-    <div class="down-contacts">
-        <p class="f-adress">г. Киев, пр-т Леси Украинки, 26</p>
-        <a href="mailto:info@example.com" class="f-mail">info@example.com</a>
-        <a href="tel:+380991111111" class="f-tel">+38 099 111 11 11</a>
-    </div>
+    <section class="footer-section">
+        <p class="webstudio-2">
+            <span class="span-blue-2">Web</span><span class="white">Studio</span>
+        </p>
+        <div class="down-contacts">
+            <p class="f-adress">г. Киев, пр-т Леси Украинки, 26</p>
+            <ul class="f-list-contacts">
+                <li class="f-contacts-li">
+                    <a href="mailto:info@example.com" class="f-mail">info@example.com</a>
+                </li>
+                <li class="f-contacts-li f-contacts-tel">
+                    <a href="tel:+380991111111" class="f-tel">+38 099 111 11 11</a>
+                </li>
+            </ul>
+        </div>
+    </section>
+    <section class="footer-social-list">
+        <p class="footer-icons-text">присоединяйтесь</p>
+        <ul class="footer-svg-list">
+            <li>
+                <a href="" class="footer-svg-link">
+                    <svg class="footer-svg">
+                        <use href="./icons/sprite.svg#icon-instagram"></use>
+                    </svg>
+                </a>
+            </li>
+            <li>
+                <a href="" class="footer-svg-link">
+                    <svg class="footer-svg">
+                        <use href="./icons/sprite.svg#icon-twiter"></use>
+                    </svg>
+                </a>
+            </li>
+            <li>
+                <a href="" class="footer-svg-link">
+                    <svg class="footer-svg">
+                        <use href="./icons/sprite.svg#icon-facebook"></use>
+                    </svg>
+                </a>
+            </li>
+            <li>
+                <a href="" class="footer-svg-link">
+                    <svg class="footer-svg">
+                        <use href="./icons/sprite.svg#icon-linked-in"></use>
+                    </svg>
+                </a>
+            </li>
+        </ul>
+    </section>
 </footer>
 </body>
 </html>
