--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css">
 </head>
 <body>
-    <!-- Вверхняя линия -->
+<!-- Вверхняя линия -->
 <nav class="top-line">
     <p class="webstudio-1">
         <span class="span-blue">Web</span>Studio
@@ -39,7 +39,7 @@
         +38 096 111 11 11
     </a>
 </nav>
-    <!-- Все фотки -->
+<!-- Все фотки -->
 <main class="main">
     <!-- Кнопки -->
     <ul class="buttons">
@@ -75,68 +75,122 @@
                 <a href="">
                 <img src="./img/img1.png" alt="" class="img">
                 <h3>Технокряк</h3>
-                <p>Веб-сайт</p>
+                <p class="photos-p">Веб-сайт</p>
+                <div class="black-content">
+                    <p class="black-content-p">
+                        Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
+                        шпионажа и атак на защищённые сервера конкурентов.
+                    </p>
+                </div>
                 </a>
             </li>
             <li class="img-conteiner-2">
                 <a href="">
                 <img src="./img/img2.png" alt="" class="img">
                 <h3 class="h3-special">Постер New Orlean vs Golden Star</h3>
-                <p>Дизайн</p>
+                <p class="photos-p">Дизайн</p>
+                <div class="black-content">
+                    <p class="black-content-p">
+                        Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
+                        шпионажа и атак на защищённые сервера конкурентов.
+                    </p>
+                </div>
                 </a>
             </li>
             <li class="img-conteiner-3">
                 <a href="">
                 <img src="./img/img3.png" alt="" class="img">
                 <h3>Ресторан Seafood</h3>
-                <p>Приложение</p>
+                <p class="photos-p">Приложение</p>
+                <div class="black-content">
+                    <p class="black-content-p">
+                        Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
+                        шпионажа и атак на защищённые сервера конкурентов.
+                    </p>
+                </div>
                 </a>
             </li>
             <li class="img-conteiner-4">
                 <a href="">
                 <img src="./img/img4.png" alt="" class="img">
                 <h3>Проект Prime</h3>
-                <p>Маркетинг</p>
+                <p class="photos-p">Маркетинг</p>
+                <div class="black-content">
+                    <p class="black-content-p">
+                        Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
+                        шпионажа и атак на защищённые сервера конкурентов.
+                    </p>
+                </div>
                 </a>
             </li>
             <li class="img-conteiner-5">
                 <a href="">
                 <img src="./img/img5.png" alt="" class="img">
                 <h3>Проект Boxes</h3>
-                <p>Приложение</p>
+                <p class="photos-p">Приложение</p>
+                <div class="black-content">
+                    <p class="black-content-p">
+                        Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
+                        шпионажа и атак на защищённые сервера конкурентов.
+                    </p>
+                </div>
                 </a>
             </li>
             <li class="img-conteiner-6">
                 <a href="">
                 <img src="./img/img6.png" alt="" class="img">
                 <h3>Inspiration has no Borders</h3>
-                <p>Веб-сайт</p>
+                <p class="photos-p">Веб-сайт</p>
+                <div class="black-content">
+                    <p class="black-content-p">
+                        Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
+                        шпионажа и атак на защищённые сервера конкурентов.
+                    </p>
+                </div>
                 </a>
             </li>
             <li class="img-conteiner-7">
                 <a href="">
                 <img src="./img/img7.png" alt="" class="img">
                 <h3>Издание Limited Edition</h3>
-                <p>Дизайн</p>
+                <p class="photos-p">Дизайн</p>
+                <div class="black-content">
+                    <p class="black-content-p">
+                        Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
+                        шпионажа и атак на защищённые сервера конкурентов.
+                    </p>
+                </div>
                 </a>
             </li>
-            <li class="img-conteiner-8">
+            <li class="img-conteiner-8 ">
                 <a href="">
                 <img src="./img/img8.png" alt="" class="img">
                 <h3>Проект LAB</h3>
-                <p>Маркетинг</p>
+                <p class="photos-p">Маркетинг</p>
+                <div class="black-content">
+                    <p class="black-content-p">
+                        Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
+                        шпионажа и атак на защищённые сервера конкурентов.
+                    </p>
+                </div>
                 </a>
             </li>
             <li class="img-conteiner-9">
                 <a href="">
                 <img src="./img/img9.png" alt="" class="img">
                 <h3>Growing Business</h3>
-                <p>Приложение</p>
+                <p class="photos-p">Приложение</p>
+                <div class="black-content">
+                    <p class="black-content-p">
+                        Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
+                        шпионажа и атак на защищённые сервера конкурентов.
+                    </p>
+                </div>
                 </a>
             </li>
         </ul>
 </main>
-    <!-- Подвал -->
+<!-- Подвал -->
 <footer class="footer">
     <section class="footer-section">
         <p class="webstudio-2">
