--- a/index.html
+++ b/index.html
@@ -44,148 +44,148 @@
     <!-- Кнопки -->
     <ul class="buttons">
         <li class="li-1">
-            <button class="button-1" type="button">
+            <button class="button-1 button" type="button">
                 Все
             </button>
         </li>
         <li class="li-2">
-            <button class="button-2" type="button">
+            <button class="button-2 button" type="button">
                 Веб-сайты
             </button>
         </li>
         <li class="li-3">
-            <button class="button-3" type="button">
+            <button class="button-3 button" type="button">
                 Приложения
             </button>
         </li>
         <li class="li-4">
-            <button class="button-4" type="button">
+            <button class="button-4 button" type="button">
                 Дизайн
             </button>
         </li>
         <li class="li-5">
-            <button class="button-5" type="button">
+            <button class="button-5 button" type="button">
                 Маркетинг
             </button>
         </li>
     </ul>
     <!-- Картинки -->
     <ul class="section">
-            <li class="img-conteiner-1">
-                <a href="">
-                <img src="./img/img1.png" alt="" class="img">
-                <h3>Технокряк</h3>
-                <p class="photos-p">Веб-сайт</p>
+            <li class="img-conteiner-1 img-conteiner">
+                <a href="" class="photos-link">
+                    <div class="black-content">
+                        <p class="black-content-p">
+                            Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
+                            шпионажа и атак на защищённые сервера конкурентов.
+                        </p>
+                    </div>
+                    <img src="./img/img1.png" alt="" class="img">
+                    <h3>Технокряк</h3>
+                    <p class="photos-p">Веб-сайт</p>
+                </a>
+            </li>
+            <li class="img-conteiner-2 img-conteiner">
+                <a href="" class="photos-link">
                 <div class="black-content">
                     <p class="black-content-p">
                         Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
                         шпионажа и атак на защищённые сервера конкурентов.
                     </p>
                 </div>
-                </a>
-            </li>
-            <li class="img-conteiner-2">
-                <a href="">
                 <img src="./img/img2.png" alt="" class="img">
                 <h3 class="h3-special">Постер New Orlean vs Golden Star</h3>
                 <p class="photos-p">Дизайн</p>
-                <div class="black-content">
-                    <p class="black-content-p">
-                        Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
-                        шпионажа и атак на защищённые сервера конкурентов.
-                    </p>
-                </div>
                 </a>
             </li>
-            <li class="img-conteiner-3">
-                <a href="">
-                <img src="./img/img3.png" alt="" class="img">
-                <h3>Ресторан Seafood</h3>
-                <p class="photos-p">Приложение</p>
-                <div class="black-content">
-                    <p class="black-content-p">
-                        Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
-                        шпионажа и атак на защищённые сервера конкурентов.
-                    </p>
-                </div>
+            <li class="img-conteiner-3 img-conteiner">
+                <a href="" class="photos-link">
+                    <div class="black-content">
+                        <p class="black-content-p">
+                            Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
+                            шпионажа и атак на защищённые сервера конкурентов.
+                        </p>
+                    </div>
+                    <img src="./img/img3.png" alt="" class="img">
+                    <h3>Ресторан Seafood</h3>
+                    <p class="photos-p">Приложение</p>
                 </a>
             </li>
-            <li class="img-conteiner-4">
-                <a href="">
-                <img src="./img/img4.png" alt="" class="img">
-                <h3>Проект Prime</h3>
-                <p class="photos-p">Маркетинг</p>
-                <div class="black-content">
-                    <p class="black-content-p">
-                        Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
-                        шпионажа и атак на защищённые сервера конкурентов.
-                    </p>
-                </div>
+            <li class="img-conteiner-4 img-conteiner">
+                <a href="" class="photos-link">
+                    <div class="black-content">
+                        <p class="black-content-p">
+                            Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
+                            шпионажа и атак на защищённые сервера конкурентов.
+                        </p>
+                    </div>
+                    <img src="./img/img4.png" alt="" class="img">
+                    <h3>Проект Prime</h3>
+                    <p class="photos-p">Маркетинг</p>
                 </a>
             </li>
-            <li class="img-conteiner-5">
-                <a href="">
-                <img src="./img/img5.png" alt="" class="img">
-                <h3>Проект Boxes</h3>
-                <p class="photos-p">Приложение</p>
-                <div class="black-content">
-                    <p class="black-content-p">
-                        Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
-                        шпионажа и атак на защищённые сервера конкурентов.
-                    </p>
-                </div>
+            <li class="img-conteiner-5 img-conteiner">
+                <a href="" class="photos-link">
+                    <div class="black-content">
+                        <p class="black-content-p">
+                            Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
+                            шпионажа и атак на защищённые сервера конкурентов.
+                        </p>
+                    </div>
+                    <img src="./img/img5.png" alt="" class="img">
+                    <h3>Проект Boxes</h3>
+                    <p class="photos-p">Приложение</p>
                 </a>
             </li>
-            <li class="img-conteiner-6">
-                <a href="">
-                <img src="./img/img6.png" alt="" class="img">
-                <h3>Inspiration has no Borders</h3>
-                <p class="photos-p">Веб-сайт</p>
-                <div class="black-content">
-                    <p class="black-content-p">
-                        Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
-                        шпионажа и атак на защищённые сервера конкурентов.
-                    </p>
-                </div>
+            <li class="img-conteiner-6 img-conteiner">
+                <a href="" class="photos-link">
+                    <div class="black-content">
+                        <p class="black-content-p">
+                            Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
+                            шпионажа и атак на защищённые сервера конкурентов.
+                        </p>
+                    </div>
+                    <img src="./img/img6.png" alt="" class="img">
+                    <h3>Inspiration has no Borders</h3>
+                    <p class="photos-p">Веб-сайт</p>
                 </a>
             </li>
-            <li class="img-conteiner-7">
-                <a href="">
-                <img src="./img/img7.png" alt="" class="img">
-                <h3>Издание Limited Edition</h3>
-                <p class="photos-p">Дизайн</p>
-                <div class="black-content">
-                    <p class="black-content-p">
-                        Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
-                        шпионажа и атак на защищённые сервера конкурентов.
-                    </p>
-                </div>
+            <li class="img-conteiner-7 img-conteiner">
+                <a href="" class="photos-link">
+                    <div class="black-content">
+                        <p class="black-content-p">
+                            Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
+                            шпионажа и атак на защищённые сервера конкурентов.
+                        </p>
+                    </div>
+                    <img src="./img/img7.png" alt="" class="img">
+                    <h3>Издание Limited Edition</h3>
+                    <p class="photos-p">Дизайн</p>
                 </a>
             </li>
-            <li class="img-conteiner-8 ">
-                <a href="">
-                <img src="./img/img8.png" alt="" class="img">
-                <h3>Проект LAB</h3>
-                <p class="photos-p">Маркетинг</p>
-                <div class="black-content">
-                    <p class="black-content-p">
-                        Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
-                        шпионажа и атак на защищённые сервера конкурентов.
-                    </p>
-                </div>
+            <li class="img-conteiner-8 img-conteiner">
+                <a href="" class="photos-link">
+                    <div class="black-content">
+                        <p class="black-content-p">
+                            Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
+                            шпионажа и атак на защищённые сервера конкурентов.
+                        </p>
+                    </div>
+                    <img src="./img/img8.png" alt="" class="img">
+                    <h3>Проект LAB</h3>
+                    <p class="photos-p">Маркетинг</p>
                 </a>
             </li>
-            <li class="img-conteiner-9">
-                <a href="">
-                <img src="./img/img9.png" alt="" class="img">
-                <h3>Growing Business</h3>
-                <p class="photos-p">Приложение</p>
-                <div class="black-content">
-                    <p class="black-content-p">
-                        Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
-                        шпионажа и атак на защищённые сервера конкурентов.
-                    </p>
-                </div>
+            <li class="img-conteiner-9 img-conteiner">
+                <a href="" class="photos-link">
+                    <div class="black-content">
+                        <p class="black-content-p">
+                            Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
+                            шпионажа и атак на защищённые сервера конкурентов.
+                        </p>
+                    </div>
+                    <img src="./img/img9.png" alt="" class="img">
+                    <h3>Growing Business</h3>
+                    <p class="photos-p">Приложение</p>
                 </a>
             </li>
         </ul>
