--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
     <title>Portfolio</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Raleway:wght@400..900&display=swap">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400..900&display=swap">
+<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&amp;family=Roboto:wght@400;500;700;900&amp;display=swap"rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css">
 </head>
 <body>
@@ -241,6 +240,16 @@
             </li>
         </ul>
     </section>
+    <form class="footer-form">
+        <label for="footer-input" class="footer-label">Подпишитесь на рассылку</label>
+        <input name="subscribe" id="footer-input" type="email" class="footer-input" placeholder="E-mail">
+        <button type="submit" class="footer-button">
+            Подписаться
+            <svg class="footer-button-svg">
+                <use href="./icons/sprite.svg#icon-telegram"></use>
+            </svg>
+        </button>
+    </form>
 </footer>
 </body>
 </html>
